# splendor

./: .agent-plan.md  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  codecov.yml  llms.txt  pyproject.toml  splendor.yaml
.codex/: memory.md
.codex/skills/ready-non-draft-pr/: SKILL.md
.github/: pr-agent-context-template.md  repo-review.yml
.github/skills/feature-pr-finish/: SKILL.md
.github/skills/pr-publish-completion/: SKILL.md
.github/workflows/: ci.yml  claude-code-review.yml  pr-agent-context-refresh.yml  pre-commit-ci-autofix-trigger.yml  splendor-generated-change-pr.yml  splendor-maintenance.yml  weekly-repo-review.yml
docs/: ci_and_repo_automation.md  companion_repo_setup.md  github_automation_architecture.md  quickstart.md  schema_contracts.md  source_resolution_refactor_plan.md  splendor_mvp_to_v1_roadmap.md  splendor_product_spec.md
examples/companion-repo/: AGENTS.md
examples/in-repo-workspace/: demo-brief.md  roadmap-note.md  splendor.yaml
examples/in-repo-workspace/wiki/: index.md  log.md
src/splendor/: __init__.py  cli.py  config.py  layout.py
src/splendor/commands/: add_source.py  file_answer.py  health.py  ingest.py  init.py  lint.py  maintenance.py  (+5 more)
tests/: test_add_source.py  test_cli.py  test_config.py  test_examples.py  test_file_answer.py  test_health.py  test_ingest.py  test_init.py  test_lint.py  test_maintenance.py  test_packaging.py  test_planning.py  test_query.py  test_repo_refresh.py  test_repo_scan.py  test_schemas.py  test_source_resolver.py  test_wiki.py  test_workflows.py
wiki/: index.md  log.md
(+34 files in other folders)
